--- a/templates/profiles/account/update-personal.html
+++ b/templates/profiles/account/update-personal.html
@@ -20,9 +20,9 @@
                 <button class="btn btn-outline-light" style="color:black"><a>Update Profile</a></button>
                 <button class="btn btn-outline-light" style="color:black">
                     {% if request.user.trainerprofile %}
-                    <a href="{% url 'trainer profile details' request.user.trainerprofile.pk %}">
+                    <a href="{% url 'trainer profile details' request.user.trainerprofile.slug %}">
                     {% elif request.user.traineeprofile %}
-                    <a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">
+                    <a href="{% url 'trainee profile details' request.user.traineeprofile.slug %}">
                     {% endif %}
                         Back to my profile</a>
                 </button>
