--- a/templates/profiles/trainer/view-for-trainees/trainer-details.html
+++ b/templates/profiles/trainer/view-for-trainees/trainer-details.html
@@ -11,8 +11,9 @@
     </h1>
     <div class="trainer-details-container">
         <div class="trainer-details-avatar">
-            <img src="{{ trainer.profile.profile_picture }}" alt="">
+            <img src="{{ trainer.profile.profile_picture }}" alt="" class="showcase-img">
             <h2>{{ trainer.training_field|capfirst }}</h2>
+            <h2>{% include 'partials/rating-stars.html' %}</h2>
             <div class="trainer-hire-btn">
                 <button class="btn btn-outline-light">
                     <a style="color:black" href="{% url 'hire coach' coach_pk=trainer.profile.pk %}">
@@ -24,6 +25,13 @@
                     </a>
                 </button>
             </div>
+            <h5><i class="fa-solid fa-square-phone"></i> +359-{{ trainer.phone_number }}</h5>
+            <button class="btn btn-outline-light" style="background-color:lightgreen">
+                <a  style="color:black; font-size:20px">
+                    <i class="fa-regular fa-calendar-days"></i>
+                    Book a meeting
+                </a>
+            </button>
         </div>
         <div class="trainer-info">
             <div class="trainer-details">
@@ -41,13 +49,7 @@
                     <h3><small class="text-muted">Years of professional experience: </small> {{ trainer.years_experience }}</h3>
                     <h3><small class="text-muted">Times hired: </small> {{ times_hired }}</h3>
                     <h3><small class="text-muted">Active clients: </small> {{ num_active_contracts }}</h3>
-                    <h5><i class="fa-solid fa-square-phone"></i> +359-{{ trainer.phone_number }}</h5>
-                    <button class="btn btn-outline-light" style="background-color:lightgreen">
-                        <a  style="color:black; font-size:20px">
-                            <i class="fa-regular fa-calendar-days"></i>
-                            Book a meeting
-                        </a>
-                    </button>
+
 
 
                 </div>
