--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -40,8 +40,9 @@
                     Sign Up
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="{% url 'trainee sign up' %}">Trainee</a></li>
-                    <li><a class="dropdown-item" href="{% url 'trainer sign up' %}">Coach</a></li>
+                    <li>
+                        <a class="dropdown-item" href="{% url 'trainee sign up' %}" style="color:black">Trainee</a></li>
+                    <li><a class="dropdown-item" href="{% url 'trainer sign up' %}" style="color:black">Coach</a></li>
                   </ul>
                 </li>
 
