--- a/staticfiles/styles/profile-dashboard.css
+++ b/staticfiles/styles/profile-dashboard.css
@@ -1,16 +1,34 @@
 .profile-dashboard{
+    margin:0;
     display:flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    width:800px;
+    justify-content: space-between;
+    width:100vw;
+    min-width:1500px;
 }
-
+.row {
+    width:100%;
+}
 .dashboard-content {
+    position:relative;
+    /*display:flex;*/
+    flex-direction: column;
+    /*height:80vh;*/
+    border-right: 1px solid wheat;
+    border-left: 1px solid wheat;
+    padding: 30px;
+    align-content: center;
+    justify-content: center;
+}
+.dashboard-section {
+    display:flex;
+    justify-content: center;
+}
+.my-trainees {
     display:flex;
     flex-direction: column;
-    height:80vh;
-    width:800px;
-    /*justify-content: space-between;*/
+    justify-content: center;
+    align-items: center;
 }
 
 #prime-deactivate {
@@ -23,12 +41,16 @@
 }
 
 .dashboard-nav-menu {
+    height:100vh;
+    /*padding-top:50px;*/
+    left:0;
+    position:fixed;
     display:flex;
     flex-direction:column;
     background-color: steelblue;
-    height:80vh;
     min-width:230px;
     justify-content: center;
+    overflow:auto;
 }
 
 .dashboard-nav-menu a:hover {
@@ -43,3 +65,20 @@
     margin-bottom:15px;
 }
 
+.profile-card {
+    background-color:steelblue;
+    width:230px;
+    height:100vh;
+    position:fixed;
+    padding-top:50px;
+    right:0;
+    color:white;
+    overflow:auto;
+}
+.profile-card .card-text{
+    padding-left:15px;
+}
+
+.list-group-item li {
+    color:white;
+}
