--- a/templates/partials/content/favourite-exercises.html
+++ b/templates/partials/content/favourite-exercises.html
@@ -7,4 +7,6 @@
     {% else %}
         No favourite exercises
     {% endif %}
+    <h2><a href="{% url 'my exercises list' %}">My Exercises</a></h2>
+
 </div>
