Trainee Detail View for Trainers
Trainers can now see fuller information of their trainees from the 'My Trainee' list page.
The details include profile data, trainee goals and their workouts.
To be styled in a better way.

--- a/staticfiles/styles/content/card-detailed-info.css
+++ b/staticfiles/styles/content/card-detailed-info.css
@@ -10,7 +10,8 @@
 .trainer-details-container,
 .exercise-details-container,
 .gym-details-container,
-.exercise-details-container{
+.exercise-details-container,
+.trainee-details-container{
     width:1100px;
     display: flex;
     flex-direction: row;
@@ -20,7 +21,8 @@
 
 .trainer-details-avatar img,
 .exercise-img img,
-.gym-logo img{
+.gym-logo img,
+.trainee-profile-details img{
     max-height: 400px;
     max-width:300px;
 }
