--- a/templates/partials/trainee-dashboard/goals-overview.html
+++ b/templates/partials/trainee-dashboard/goals-overview.html
@@ -53,7 +53,7 @@
                 {% endif %}
             </tr>
         {% endfor %}
-        <tr>
+        <tr id="manage-goals-btn">
             <td><a href="{% url 'manage goals' %}">Manage Goals</a></td>
         </tr>
 
