--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -14,7 +14,7 @@
             <li><a href="{% url 'gyms list' %}">Find a gym</a></li>
 
             {% if request.user.trainerprofile %}
-                <li><a href="">My Trainees</a></li>
+                <li><a href="{% url 'trainer profile details' slug=request.user.trainerprofile.slug %}">My Trainees</a></li>
                 <li><a href="{% url 'trainer profile details' slug=request.user.trainerprofile.slug %}">
                     <img src="{{ request.user.profile_picture }}" alt="" width="40px" height="40px">
                     {{ request.user }}
